// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar > renders with actions slot correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">
        <!--v-if-->
        <div data-slot="actions" class="flex items-center gap-1.5 shrink-0">Actions slot
          <!--v-if-->
        </div>
      </div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with breakpoint 2xl correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="collapsed" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden 2xl:block" data-collapsible="offcanvas">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="collapsed" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="collapsed" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out 2xl:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">
        <!--v-if-->
        <div data-slot="actions" class="flex items-center gap-1.5 shrink-0"><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text hover:bg-background-elevated active:bg-background-elevated outline-outline-inverted/25 focus-visible:outline-3 hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent p-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="shrink-0 size-5"></svg>
            <!--v-if-->
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with breakpoint lg correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with breakpoint md correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden md:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out md:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with breakpoint sm correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden sm:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out sm:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with breakpoint xl correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="collapsed" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden xl:block" data-collapsible="offcanvas">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="collapsed" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="collapsed" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out xl:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">
        <!--v-if-->
        <div data-slot="actions" class="flex items-center gap-1.5 shrink-0"><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text hover:bg-background-elevated active:bg-background-elevated outline-outline-inverted/25 focus-visible:outline-3 hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent p-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="shrink-0 size-5"></svg>
            <!--v-if-->
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with class correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block bg-background-elevated/50">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with close correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-(--sidebar-width-icon)"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:w-(--sidebar-width-icon)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">
        <div data-slot="wrapper" class="min-w-0 flex-1">
          <p data-slot="title" class="color-text-highlighted font-600 truncate">Sidebar Title</p>
          <!--v-if-->
        </div>
        <div data-slot="actions" class="flex items-center gap-1.5 shrink-0 group-data-[state=collapsed]/sidebar:hidden"><button type="button" data-slot="close" aria-label="Close" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text hover:bg-background-elevated active:bg-background-elevated outline-outline-inverted/25 focus-visible:outline-3 hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent p-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="shrink-0 size-5"></svg>
            <!--v-if-->
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4 group-data-[state=collapsed]/sidebar:overflow-hidden"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with collapsed icon correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="collapsed" data-collapsible="icon" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="collapsed" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-(--sidebar-width-icon)"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="collapsed" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:w-(--sidebar-width-icon)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4 group-data-[state=collapsed]/sidebar:overflow-hidden"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with collapsed offcanvas correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="collapsed" data-collapsible="offcanvas" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="collapsed" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="collapsed" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with collapsible icon correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-(--sidebar-width-icon)"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:w-(--sidebar-width-icon)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4 group-data-[state=collapsed]/sidebar:overflow-hidden"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with collapsible none correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<aside data-slot="root" data-variant="sidebar" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] h-full w-(--sidebar-width) border-e border-border">
  <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
    <!--v-if-->
    <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
    <!--v-if-->
  </div>
</aside>"
`;

exports[`sidebar > renders with collapsible offcanvas correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with content slot correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with default slot correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4">Default slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with description correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">
        <div data-slot="wrapper" class="min-w-0 flex-1">
          <p data-slot="title" class="color-text-highlighted font-600 truncate">Sidebar Title</p>
          <p data-slot="description" class="color-text-muted text-sm truncate">Sidebar Description</p>
        </div>
        <!--v-if-->
      </div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with footer slot correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <div data-slot="footer" class="flex items-center gap-1.5 overflow-hidden p-4">Footer slot</div>
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with header slot correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">Header slot</div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with mode drawer correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with mode modal correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with mode slideover correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with rail correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-(--sidebar-width-icon)"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:w-(--sidebar-width-icon)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4 group-data-[state=collapsed]/sidebar:overflow-hidden"></div>
      <!--v-if-->
    </div><button data-slot="rail" data-state="expanded" aria-label="Toggle" tabindex="-1" class="absolute inset-y-0 z-20 hidden w-4 after:absolute after:inset-y-0 after:left-1/2 after:w-px hover:after:bg-(--ui-border-accented) after:transition-colors transition-all ease-out lg:flex end-0 translate-x-1/2 cursor-w-resize data-[state=collapsed]:cursor-e-resize"></button>
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with side left correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with side right correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="right" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex right-0 border-s border-border data-[state=collapsed]:-right-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with title correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <div data-slot="header" class="flex items-center gap-1.5 overflow-hidden px-4 min-h-(--ui-header-height)">
        <div data-slot="wrapper" class="min-w-0 flex-1">
          <p data-slot="title" class="color-text-highlighted font-600 truncate">Sidebar Title</p>
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with ui correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4 py-0"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with variant floating correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="floating" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border p-4 border-transparent data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide rounded-lg ring ring-ring shadow-lg">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with variant inset correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="inset" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border py-4 border-transparent data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide divide-transparent">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;

exports[`sidebar > renders with variant sidebar correctly 1`] = `
"<!-- Non-collapsible: simple inline sidebar -->
<!-- Collapsible: fixed sidebar with gap spacer + mobile menu -->
<aside data-slot="root" data-state="expanded" data-variant="sidebar" data-side="left" class="peer [--sidebar-width:16rem] [--sidebar-width-icon:4rem] group/sidebar hidden lg:block">
  <!-- Gap spacer: reserves layout space for the fixed sidebar -->
  <div data-slot="gap" data-state="expanded" class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-280 ease-out data-[state=collapsed]:w-0"></div><!-- Fixed container: the actual visible sidebar -->
  <div data-slot="container" data-state="expanded" class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-280 ease-out lg:flex left-0 border-e border-border data-[state=collapsed]:-left-(--sidebar-width)">
    <div data-slot="inner" class="flex size-full flex-col overflow-hidden divide-y divide-divide">
      <!--v-if-->
      <div data-slot="body" class="flex min-h-0 flex-1 flex-col gap-4 overflow-y-auto p-4"></div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</aside>
<!-- Mobile menu -->
<!--v-if-->"
`;
